src/test/rustdoc-ui/infinite-recursive-type-impl-trait.stderr
error[E0072]: recursive type `f::E` has infinite size
  --> $DIR/infinite-recursive-type-impl-trait.rs:2:5
   |
LL |     enum E {
   |     ^^^^^^ recursive type has infinite size
LL |
LL |         V(E),
   |           - recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `f::E` representable
   |
LL |         V(Box<E>),
   |           ^^^^ ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
